--- a/index.html
+++ b/index.html
@@ -13,51 +13,48 @@
 <body>
 
   <div class="wrapper">
+    
+      <div class="images">
+        <img src="./images/illustration-woman-online-mobile.svg" alt="woman with computer" class="illustration">
 
-    <img src="./images/illustration-woman-online-mobile.svg" alt="woman with computer" class="illustration">
-    <img src="./images/bg-pattern-mobile.svg" alt="illustration shadow" class="illustration-shadow">
-
-    <h3>FAQ</h3>
-
-    <div class="question-box">
-
-      <div class="question">
-        How many team members can I invite?
-      </div>
-      <div class="answer">
-        You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-      </div>
-      <div class="question">
-        What is the maximum file upload size?
-      </div>
-      <div class="answer">
-        No more than 2GB. All files in your account must fit your allotted storage space.
-      </div>
-      <div class="question">
-        How do I reset my password?
-      </div>
-      <div class="answer">
-        Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-      </div>
-      <div class="question">
-        Can I cancel my subscription?
-      </div>
-      <div class="answer">
-        Yes! Send us a message and we'll process your request no questions asked.
-      </div>
-      <div class="question">
-        Do you provide additional support?
-      </div>
-      <div class="answer">
-        Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        <img src="./images/bg-pattern-mobile.svg" alt="illustration shadow" class="illustration-shadow">
       </div>
 
-    </div>
+      <h3>FAQ</h3>
 
+      <div class="question-box">
+
+        <div class="question">How many team members can I invite?</div>
+        <div class="answer">
+          You can invite up to 2 additional users on the Free plan. There is no limit on 
+    team members for the Premium plan.
+        </div>
+        <hr/>
+        <div class="question">What is the maximum file upload size?</div>
+        <div class="answer">
+          No more than 2GB. All files in your account must fit your allotted storage space.
+        </div>
+        <hr/>
+        <div class="question">How do I reset my password?</div>
+        <div class="answer">
+          Click “Forgot password” from the login page or “Change password” from your profile page.
+    A reset link will be emailed to you.
+        </div>
+        <hr/>
+        <div class="question">Can I cancel my subscription?</div>
+        <div class="answer">
+          Yes! Send us a message and we'll process your request no questions asked.
+        </div>
+        <hr/>
+        <div class="question">Do you provide additional support?</div>
+        <div class="answer">
+          Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        </div>
+        <hr/>
+      </div>
+    
   </div>
-  
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
