--- a/index.html
+++ b/index.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="style.css">
+	
+	<title>Frontend Mentor | FAQ Accordion Card</title>
 
 </head>
 <body>
 
-  <div class="wrapper">
-    
-      <div class="images">
-        <img src="./images/illustration-woman-online-mobile.svg" alt="woman with computer" class="illustration">
+	<div class="wrapper">
+		
+			<div class="images">
+				<img src="./images/illustration-woman-online-mobile.svg" alt="woman with computer" class="illustration">
 
-        <img src="./images/bg-pattern-mobile.svg" alt="illustration shadow" class="illustration-shadow">
-      </div>
+				<img src="./images/bg-pattern-mobile.svg" alt="illustration shadow" class="illustration-shadow">
+			</div>
 
-      <h3>FAQ</h3>
+			<div class="information">
 
-      <div class="question-box">
+				<h3>FAQ</h3>
 
-        <div class="question">How many team members can I invite?</div>
-        <div class="answer">
-          You can invite up to 2 additional users on the Free plan. There is no limit on 
-    team members for the Premium plan.
-        </div>
-        <hr/>
-        <div class="question">What is the maximum file upload size?</div>
-        <div class="answer">
-          No more than 2GB. All files in your account must fit your allotted storage space.
-        </div>
-        <hr/>
-        <div class="question">How do I reset my password?</div>
-        <div class="answer">
-          Click “Forgot password” from the login page or “Change password” from your profile page.
-    A reset link will be emailed to you.
-        </div>
-        <hr/>
-        <div class="question">Can I cancel my subscription?</div>
-        <div class="answer">
-          Yes! Send us a message and we'll process your request no questions asked.
-        </div>
-        <hr/>
-        <div class="question">Do you provide additional support?</div>
-        <div class="answer">
-          Chat and email support is available 24/7. Phone lines are open during normal business hours.
-        </div>
-        <hr/>
-      </div>
-    
-  </div>
+				<div class="question-box">
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+					<div class="question question-one" tabindex="0">How many team members can I invite?</div>
+					<div class="answer answer-one">
+						You can invite up to 2 additional users on the Free plan. There is no limit on 
+			team members for the Premium plan.
+					</div>
+					<hr/>
+					<div class="question question-two" tabindex="0">What is the maximum file upload size?</div>
+					<div class="answer answer-two">
+						No more than 2GB. All files in your account must fit your allotted storage space.
+					</div>
+					<hr/>
+					<div class="question question-three" tabindex="0">How do I reset my password?</div>
+					<div class="answer answer-three">
+						Click “Forgot password” from the login page or “Change password” from your profile page.
+			A reset link will be emailed to you.
+					</div>
+					<hr/>
+					<div class="question question-four" tabindex="0">Can I cancel my subscription?</div>
+					<div class="answer answer-four">
+						Yes! Send us a message and we'll process your request no questions asked.
+					</div>
+					<hr/>
+					<div class="question question-five" tabindex="0">Do you provide additional support?</div>
+					<div class="answer answer-five">
+						Chat and email support is available 24/7. Phone lines are open during normal business hours.
+					</div>
+					<hr/>
+				</div>
+			</div>
+		
+	</div>
+
+	<div class="attribution">
+		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+		Coded by <a href="https://github.com/WerSzpe" target="_blank">Weronika</a>.
+	</div>
 
 </body>
 </html>
